# AI_01_03

./: .env.example  .gitignore  BINNA_TASKS.md  SPRINT01_INTEGRATION_CONTRACT.md  git_branch_guide.md  pyproject.toml
ai_worker/vision/: detector.py  test_yolo.py
app/: main.py
app/apis/: integration_routers.py
app/apis/v1/: __init__.py  chat_routers.py  tts_routers.py  vision.py
app/core/: config.py
app/dtos/: chat.py  integration.py  tts.py
app/prompts/: system_prompt.py
app/services/: llm_guide.py  rag_search.py  tts.py
app/static/: index.html
app/tests/: conftest.py
app/tests/chat_apis/: conftest.py  test_chat_api.py
app/tests/integration_apis/: test_integration_contract_apis.py
scripts/: benchmark_chat.py  build_faiss_index.py  fetch_drug_info.py
요약(기술문서등)/: API명세서 Template - origin.csv  API명세서.csv  API명세서.md  API명세서_간소화.csv  API명세서_노션용.csv  요구사항 정의서 Template - 요구사항 정의서.csv  요구사항정의서_간소화.csv  요구사항정의서_노션용.csv  요약 프로젝트 요구사항 정의서.csv  요약 프로젝트 요구사항 정의서.md  요약- 팀원별 업무분장.md  🏠 요약 - 프로젝트 홈.md  📋 요약 프로젝트 완전 통합 문서 (노션용).md
요약(기술문서등)/01-PRD/: PRD - 제품 요구사항 문서.md
요약(기술문서등)/02-기능명세/: P0 - MVP 핵심기능.md  P0-1 알약 식별 (Vision AI).md  P0-2 복약지도문 OCR.md  P0-3 LLM 맞춤형 가이드.md  P0-4 AI 챗봇 (RAG).md  P0-5 복약 기록 대시보드.md  P1 - Post-MVP 기능.md  P2 - Future Scope.md  가족 공동 관리 기능.md
요약(기술문서등)/03-기술아키텍처/: API 명세서.md  ERD - 데이터베이스 설계.md  GLM-5 구현 5단계.md  UI·UX 디자인 가이드.md  기술 스택 정리.md  데이터 전략 및 보안.md  시스템 아키텍처 설계.md
요약(기술문서등)/04-타임라인/: 1단계 - 기획 및 설계 (W1-W4).md  2단계 - UI·UX 디자인 (W5-W8).md  2단계 - 개발 Sprint 1 (백엔드).md  3단계 - 개발 (W9-W20).md  3단계 - 개발 Sprint 2 (웹뷰).md  4단계 - 테스트 및 QA (W21-W24).md  4단계 - 테스트 및 출시.md  5단계 - 출시 및 운영 (W25~).md  전체 타임라인.md
요약(기술문서등)/05-회의록/: T_요약_회의록.md
요약(기술문서등)/06-스프린트/: Sprint 01.md  Sprint 02.md  T_스프린트.md
요약(기술문서등)/07-의사결정로그/: ADR 로그.md
